<resources>
    <string name="app_name">Quiz App</string>

    <string name="question_1">1. How many Provinces/states are in South Africa?</string>
    <string name="question_2">2. How many Languages are official in South Africa?</string>

    <string name="question_3">3. What is the Capital City of South Africa?</string>
    <string name="question_4">4. First Black president of South Africa?</string>
    <string name="question_5">5. How many colors are in the National Flag.</string>

</resources>
